[package]
name = "tokio-beanstalkd"
version = "0.5.0-alpha.1"
authors = ["Bhargav Voleti <bhargav.voleti93@gmail.com>"]
edition = "2021"

description = "Asynchronous client library for interacting with Beanstalkd work queue."
readme = "README.md"

homepage = "https://github.com/bIgBV/tokio-beanstalkd"
repository = "https://github.com/bIgBV/tokio-beanstalkd"

keywords = ["beanstalkd", "tokio", "asynchronous"]
categories = ["api-bindings", "asynchronous", "network-programming"]

license = "MIT"

[dependencies]
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = "0.1.14"
futures = "0.3.29"
thiserror = "1.0.50"

[dev-dependencies]
tokio = { version = "1", features = ["net", "rt", "macros"] }
